kubernetes/apps/cosign-system/policy-controller/templates/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: policy-controller-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: policy-controller
    egress:
      - toFQDNs:
          - matchName: "tuf-repo-cdn.sigstore.dev"
        toPorts:
          - ports:
              - port: "443"
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: policy-controller-egress-internal
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: policy-controller
    egress:
      - toEntities:
          - kube-apiserver
      - toEndpoints:
          - {}
